--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>I am Precious Afolabi</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://peakspot.rf.gd/fonts/font-awesome.css">
+    <link rel="stylesheet" href="fonts/font-awesome.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile-view.css">
     <style>
